Swift 4.1 update